--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "process.env.CI ='' react-scripts start",
-    "build": "process.env.CI ='' react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
