--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "year-countdown",
   "version": "0.1.0",
   "private": true,
+  "author": "ozorku",
   "dependencies": {
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
